# NQS-Ising-Dataset

./: .gitignore  README.md  benchmark.ipynb  benchmark.py  benchmark_helpers.py  main.py  pyproject.toml
data/: observables_100_2.parquet  observables_16_2.parquet  observables_36_2.parquet  observables_64_2.parquet  states_100_2.parquet  states_16_2.parquet  states_36_2.parquet  states_64_2.parquet
data/bonds/: all_bonds_100.json  all_bonds_144.json  all_bonds_16.json  all_bonds_196.json  all_bonds_256.json  all_bonds_324.json  all_bonds_36.json  all_bonds_4.json  all_bonds_400.json  all_bonds_484.json  all_bonds_576.json  all_bonds_64.json
weights/: W_ising_100_2_ti_W.csv  W_ising_100_2_ti_b.csv  W_ising_16_2_ti_W.csv  W_ising_16_2_ti_b.csv  W_ising_36_2_ti_W.csv  W_ising_36_2_ti_b.csv  W_ising_64_2_ti_W.csv  W_ising_64_2_ti_b.csv
